@@ -282,7 +282,7 @@ AC_DEFUN(APACHE_MODULE,[
   AC_ARG_ENABLE(translit($1,_,-),APACHE_HELP_STRING(optname(),$2),,enable_$1=ifelse($5,,maybe-all,$5))
   undefine([optname])dnl
   _apmod_extra_msg=""
-  dnl When --enable-modules=most or --enable-modules=reallyall is set and the
+  dnl When --enable-modules=most or --enable-modules=(really)all is set and the
   dnl module was not explicitly requested, allow a module to disable itself if
   dnl its pre-reqs fail.
   dnl XXX: Todo: Allow to disable specific modules even with "reallyall".
