@@ -53,7 +53,8 @@ APACHE_MODULE(proxy_fcgi, Apache proxy FastCGI module.  Requires and is enabled 
 APACHE_MODULE(proxy_scgi, Apache proxy SCGI module.  Requires and is enabled by --enable-proxy., $proxy_scgi_objs, , $proxy_mods_enable)
 APACHE_MODULE(proxy_fdpass, Apache proxy to Unix Daemon Socket module.  Requires --enable-proxy., $proxy_fdpass_objs, , $proxy_mods_fdpass_enable, [
   if test $ac_cv_have_decl_CMSG_DATA = "no"; then
-    AC_MSG_ERROR([Your system does not support CMSG_DATA.])
+    AC_MSG_WARN([Your system does not support CMSG_DATA.])
+    enable_proxy_fdpass=no
   fi
 ])
 APACHE_MODULE(proxy_ajp, Apache proxy AJP module.  Requires and is enabled by --enable-proxy., $proxy_ajp_objs, , $proxy_mods_enable)
